test/Fail/Issue857b.err
Issue857b.agda:35.7-11: error: [UnequalTerms]
The terms
  ⊥-elim x
and
  (λ ()) x
are not equal at type A
when checking that the expression refl has type ⊥-elim ≡ (λ ())
